# Snake

./: .gitignore  CMakeLists.txt  README.md
src/: apple.c  apple.h  config.h  main.c  player.c  player.h
